--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <!-- TODO Localize the document title and update it automatically whenever the locale changes -->
   <title>Vue Material boilerplate</title>
   <link rel="icon" type="image/png" sizes="96x96" href="favicon.png">
-  <script src="https://code.responsivevoice.org/responsivevoice.js?key=Itrk2iyK"></script>
+  <!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=Itrk2iyK"></script> -->
 </head>
 
 <body>
